totally ready for deploy

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
     {% csrf_token %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/style.css?ihi">
+    <link rel="stylesheet" href="https://protagonist-b3c.pages.dev/style.css?ihi">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -27,11 +27,11 @@
         <div class="navSpace"></div>
         <div id="nav">
             <div id="nav_Elements">
-                <div class="navELements currentNavLocation"><img src="/static/navIconHome.png" alt=""><span>Home</span>
+                <div class="navELements currentNavLocation"><img src="https://protagonist-b3c.pages.dev/navIconHome.png" alt=""><span>Home</span>
                 </div>
-                <div class="navELements" onclick="gotoPage('/activity')"><img src="/static/activity.png"
+                <div class="navELements" onclick="gotoPage('/activity')"><img src="https://protagonist-b3c.pages.dev/activity.png"
                         alt=""><span>Activity</span></div>
-                <div class="navELements" onclick="gotoPage('/profile?userid={{userid}}')"><img src="/static/profile.png"
+                <div class="navELements" onclick="gotoPage('/profile?userid={{userid}}')"><img src="https://protagonist-b3c.pages.dev/profile.png"
                         alt=""><span>Profile</span></div>
 
 
@@ -39,7 +39,7 @@
         </div>
 
         <div id="loadingScreenHtml" style="display: none;">
-            <div id="loadingScreenScreen"><img id="loadingScreenLoadingIcon" src="/static/loading.png" alt=""></div>
+            <div id="loadingScreenScreen"><img id="loadingScreenLoadingIcon" src="https://protagonist-b3c.pages.dev/loading.png" alt=""></div>
         </div>
         <div id="content">
 
@@ -52,10 +52,10 @@
                                 id="postText"></textarea></div>
                         <div id="postButtonArea">
                             <button id="postThecontentButton" onclick="sendData()">Post</button>
-                            <div id="loadingbarforPost"><img id="postLoadingImage" src="/static/loading.png" alt="">
+                            <div id="loadingbarforPost"><img id="postLoadingImage" src="https://protagonist-b3c.pages.dev/loading.png" alt="">
                             </div>
                             <div id="selcetImageButtonPareant"><label for="postImage"><img id="previewImage"
-                                        src="/static/selectImage.png" alt=""></label></div>
+                                        src="https://protagonist-b3c.pages.dev/selectImage.png" alt=""></label></div>
                             <input type="file" id="postImage" name="postImage" style="display: none;">
                         </div>
                     </div>
@@ -65,7 +65,7 @@
 
             <!-- <div class="posts">
                 <div class="creatorInfo">
-                    <img src="/static/fakeprofile.png" alt="">
+                    <img src="https://protagonist-b3c.pages.dev/fakeprofile.png" alt="">
                     <div class="creatorTextInfo">
                         <span class="postCreatorNameinPost">Samantha Hill</span><br>
                         <span class="creationTimeofThepost">3 hours ago</span>
@@ -76,10 +76,10 @@
                         reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm
                         GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm Gladwell</span>
                 </div>
-                <div class="imageFrame"><img src="/static/example.png" alt=""></div>
+                <div class="imageFrame"><img src="https://protagonist-b3c.pages.dev/example.png" alt=""></div>
                 <div class="postItarection">
-                    <div class="postInarectionItem"><img src="/static/comments.png" alt=""><span>24</span></div>
-                    <div class="postInarectionItem"><img src="/static/likes.png" alt=""><span>423</span></div>
+                    <div class="postInarectionItem"><img src="https://protagonist-b3c.pages.dev/comments.png" alt=""><span>24</span></div>
+                    <div class="postInarectionItem"><img src="https://protagonist-b3c.pages.dev/likes.png" alt=""><span>423</span></div>
                 </div>
                 <div class="commentsItarections">
                     <form onsubmit="return addingComment(event, 'dfslfs');" action="#">
@@ -91,7 +91,7 @@
        
     </div>
     <script>var requestRunning = false;</script>
-    <script src="/static/main.js"></script>
+    <script src="https://protagonist-b3c.pages.dev/main.js"></script>
     <script>
         var maxPrevius = 0
         var myDiv = document.getElementById("content");
