--- a/ui/post.html
+++ b/ui/post.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/static/style.css?4334" />
+    <link rel="stylesheet" href="https://protagonist-b3c.pages.dev/style.css?4334" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,7 +15,7 @@
 
   <body>
     <div id="loadingScreenHtml" style="display: none;">
-      <div id="loadingScreenScreen"><img id="loadingScreenLoadingIcon" src="/static/loading.png" alt=""></div>
+      <div id="loadingScreenScreen"><img id="loadingScreenLoadingIcon" src="https://protagonist-b3c.pages.dev/loading.png" alt=""></div>
   </div>
     <div id="loadingScrseen"></div>
     <div id="parent">
@@ -23,20 +23,20 @@
       <div id="nav">
         <div id="nav_Elements">
           <div class="navELements" onclick="gotoPage('/')">
-            <img src="/static/navIconHome.png" alt="" /><span>Home</span>
+            <img src="https://protagonist-b3c.pages.dev/navIconHome.png" alt="" /><span>Home</span>
           </div>
           <div class="navELements" onclick="gotoPage('/activity')">
-            <img src="/static/activity.png" alt="" /><span>Activity</span>
+            <img src="https://protagonist-b3c.pages.dev/activity.png" alt="" /><span>Activity</span>
           </div>
           <div class="navELements" onclick="gotoPage('/profile')">
-            <img src="/static/profile.png" alt="" /><span>Profile</span>
+            <img src="https://protagonist-b3c.pages.dev/profile.png" alt="" /><span>Profile</span>
           </div>
         </div>
       </div>
 
       <div id="loadingScreenHtml" style="display: none">
         <div id="loadingScreenScreen">
-          <img id="loadingScreenLoadingIcon" src="/static/loading.png" alt="" />
+          <img id="loadingScreenLoadingIcon" src="https://protagonist-b3c.pages.dev/loading.png" alt="" />
         </div>
       </div>
       <div id="content">
@@ -58,8 +58,8 @@
                 <div class="imageFrame"><img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/postImage/{{postId}}.jpg" alt=""></div>
                 {%endif%}
                 <div class="postItarection">
-                    <div class="postInarectionItem"><img src="/static/comments.png" alt=""><span>{{numOfComment}}</span></div>
-                    <div class="postInarectionItem"><img src="/static/likes.png" alt=""><span>423</span></div>
+                    <div class="postInarectionItem"><img src="https://protagonist-b3c.pages.dev/comments.png" alt=""><span>{{numOfComment}}</span></div>
+                    <div class="postInarectionItem"><img src="https://protagonist-b3c.pages.dev/likes.png" alt=""><span>423</span></div>
                 </div>
                 <div class="commentsItarections">
                     <form onsubmit="return addingComment(event, '{{postId}}');" action="#">
@@ -91,7 +91,7 @@
           {%endif%}
           <div class="postItarection">
             <div class="postInarectionItem">
-              <img src="/static/comments.png" alt="" /><span
+              <img src="https://protagonist-b3c.pages.dev/comments.png" alt="" /><span
                 >{{numOfComment}}</span
               >
             </div>
@@ -99,7 +99,7 @@
               <img
                 id="{{postId}}LIKE"
                 onclick="sendAddingLikeRequest('{{postId}}')"
-                src="/static/{{likeState}}.png"
+                src="https://protagonist-b3c.pages.dev/{{likeState}}.png"
                 alt=""
               /><span id="{{postId}}LIKECOUNT">{{numOfLike}}</span>
             </div>
@@ -136,7 +136,7 @@
         </div>
       </div>
     </div>
-    <script src="/static/main.js"></script>
+    <script src="https://protagonist-b3c.pages.dev/main.js"></script>
     </script>
 
     <script>
