--- a/ui/postrender.html
+++ b/ui/postrender.html
@@ -15,8 +15,8 @@
     <div class="imageFrame"><img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/postImage/{{post.postId}}.jpg" alt=""></div>
     {%endif%}
     <div class="postItarection">
-        <div class="postInarectionItem"><img onclick="gotoPage('/post/{{post.postId}}')" src="/static/comments.png" alt=""><span>{{post.numOfPost}}</span></div>
-        <div class="postInarectionItem"><img id="{{post.postId}}LIKE" onclick="sendAddingLikeRequest('{{post.postId}}')" src="/static/{{post.likeState}}.png" alt=""><span id="{{post.postId}}LIKECOUNT">{{post.numOfLike}}</span></div>
+        <div class="postInarectionItem"><img onclick="gotoPage('/post/{{post.postId}}')" src="https://protagonist-b3c.pages.dev/comments.png" alt=""><span>{{post.numOfPost}}</span></div>
+        <div class="postInarectionItem"><img id="{{post.postId}}LIKE" onclick="sendAddingLikeRequest('{{post.postId}}')" src="https://protagonist-b3c.pages.dev/{{post.likeState}}.png" alt=""><span id="{{post.postId}}LIKECOUNT">{{post.numOfLike}}</span></div>
     </div>
     <div class="commentsItarections">
         <form class="commetnSubmit" onsubmit="return addingComment(event, '{{post.postId}}');" action="#">
