--- a/ui/profile.html
+++ b/ui/profile.html
@@ -4,7 +4,7 @@
     {% csrf_token %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="https://protagonist-b3c.pages.dev/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -15,22 +15,22 @@
 
 <body>
   <div id="loadingScreenHtml" style="display: none;">
-    <div id="loadingScreenScreen"><img id="loadingScreenLoadingIcon" src="/static/loading.png" alt=""></div>
+    <div id="loadingScreenScreen"><img id="loadingScreenLoadingIcon" src="https://protagonist-b3c.pages.dev/loading.png" alt=""></div>
 </div>
     <div id="parent">
         <div class="navSpace"></div>
         <div id="nav">
             <div id="nav_Elements">
-                <div class="navELements" onclick="gotoPage('/')"><img src="/static/navIconHome.png" alt=""><span>Home</span>
+                <div class="navELements" onclick="gotoPage('/')"><img src="https://protagonist-b3c.pages.dev/navIconHome.png" alt=""><span>Home</span>
                 </div>
-                <div class="navELements" onclick="gotoPage('/activity')"><img src="/static/activity.png" alt=""><span>Activity</span></div>
-                <div class="navELements currentNavLocation" ><img src="/static/profile.png" alt=""><span>Profile</span></div>
+                <div class="navELements" onclick="gotoPage('/activity')"><img src="https://protagonist-b3c.pages.dev/activity.png" alt=""><span>Activity</span></div>
+                <div class="navELements currentNavLocation" ><img src="https://protagonist-b3c.pages.dev/profile.png" alt=""><span>Profile</span></div>
 
 
             </div>
         </div>
 
-        <div id="loadingScreenHtml" style="display: none;"><div id="loadingScreenScreen"><img id="loadingScreenLoadingIcon" src="/static/loading.png" alt=""></div></div>
+        <div id="loadingScreenHtml" style="display: none;"><div id="loadingScreenScreen"><img id="loadingScreenLoadingIcon" src="https://protagonist-b3c.pages.dev/loading.png" alt=""></div></div>
         <div id="content">
             <div id="headerText">Profile</div>
             <div id="porfileInfoArea">
@@ -42,14 +42,14 @@
 
         </div>
     </div>
-    <script src="/static/main.js"></script>
+    <script src="https://protagonist-b3c.pages.dev/main.js"></script>
     <script>function getUserPost(){
         console.log("working")
 
   let paretn = document.getElementById("content");
   paretn.insertAdjacentHTML(
     "beforeend",
-    '<div id="postLoadingWating"><img id="postLoadingWatingImage" src="/static/loading.png" alt=""></div>'
+    '<div id="postLoadingWating"><img id="postLoadingWatingImage" src="https://protagonist-b3c.pages.dev/loading.png" alt=""></div>'
   );
   let roating = 0;
   let postLoadingInterval = setInterval(() => {
