--- a/ui/commentrender.html
+++ b/ui/commentrender.html
@@ -1,7 +1,7 @@
 {%for cmt in comments%}
     <div class="comment">
         <div class="commentCreatorInfo">
-            <img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{cmt.userId}}.jpg" alt=""><span>{{cmt.userName}}</span>
+            <img src="/statics/profileIcons/{{cmt.userId}}.jpg" alt=""><span>{{cmt.userName}}</span>
         </div>
         <div class="commentContent">{{cmt.commentText}}</div>
     </div>
