--- a/ui/index.html
+++ b/ui/index.html
@@ -46,7 +46,7 @@
             <div id="headerText">Home</div>
             <div id="addingPostArea">
                 <div id="addingPostElements">
-                    <div id="profilePcitrue"><img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{userid}}.jpg" alt=""></div>
+                    <div id="profilePcitrue"><img src="/statics/profileIcons/{{userid}}.jpg" alt=""></div>
                     <div id="writing">
                         <div id="textArea"><textarea placeholder="What's on you mind?" name="postText"
                                 id="postText"></textarea></div>
