--- a/ui/post.html
+++ b/ui/post.html
@@ -44,7 +44,7 @@
 
         <!-- <div class="posts">
                 <div class="creatorInfo">
-                    <img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{userId}}.jpg" alt="">
+                    <img src="/statics/profileIcons/{{userId}}.jpg" alt="">
                     <div class="creatorTextInfo">
                         <span class="postCreatorNameinPost">{{userName}}</span><br>
                         <span class="creationTimeofThepost">3 hours ago</span>
@@ -55,7 +55,7 @@
                 </div>
                 {{hasimage}}
                 {%if hasImage == "1" %}
-                <div class="imageFrame"><img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/postImage/{{postId}}.jpg" alt=""></div>
+                <div class="imageFrame"><img src="/statics/postImage/{{postId}}.jpg" alt=""></div>
                 {%endif%}
                 <div class="postItarection">
                     <div class="postInarectionItem"><img src="https://protagonist-b3c.pages.dev/comments.png" alt=""><span>{{numOfComment}}</span></div>
@@ -70,7 +70,7 @@
         <div class="posts">
           <div class="creatorInfo">
             <img
-              src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{userId}}.jpg"
+              src="/statics/profileIcons/{{userId}}.jpg"
               alt=""
             />
             <div class="creatorTextInfo">
@@ -84,7 +84,7 @@
           {%if hasImage == "1" %}
           <div class="imageFrame">
             <img
-              src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/postImage/{{postId}}.jpg"
+              src="/statics/postImage/{{postId}}.jpg"
               alt=""
             />
           </div>
@@ -126,7 +126,7 @@
           <div class="comment">
             <div class="commentCreatorInfo">
               <img
-                src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{cmt.userId}}.jpg"
+                src="/statics/profileIcons/{{cmt.userId}}.jpg"
                 alt=""
               /><span>{{cmt.userName}}</span>
             </div>
