--- a/ui/renderComment.html
+++ b/ui/renderComment.html
@@ -2,7 +2,7 @@
 <div class="comment">
   <div class="commentCreatorInfo">
     <img
-      src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{cmt.userId}}.jpg"
+      src="/statics/profileIcons/{{cmt.userId}}.jpg"
       alt=""
     /><span>{{cmt.userName}}</span>
   </div>
